# MA-Project

./: .gitignore  CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
src/: app_config.h  attendance.c  attendance.h  ble_window.c  ble_window.h  led_display.c  led_display.h  led_display_test.c  main.c  main2.c
